--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 	},
 	"dependencies": {
 		"polylib": "^1.1.5",
+		"@nfjs/back": "^1.0.6",
+		"@nfjs/core": "^1.0.4",
+		"@nfjs/front-server": "^1.0.6",
+		"@nfjs/auth": "^1.0.0",
 		"dayjs": "^1.10.4",
 		"imask": "^6.1.0",
 		"mime": "^3.0.0",
