--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"main": "index.js",
 	"repository": {
-		"url": ""
+		"url": "https://github.com/neo794/pf-front.git"
 	},
 	"author": {
 		"name": "Artem Morozov",
