--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@pf/front",
+	"name": "@neo794/front",
 	"version": "1.0.0",
 	"description": "Front",
 	"license": "MIT",
 	"type": "module",
 	"main": "index.js",
 	"repository": {
-		"url": "https://github.com/neo794/pf-front.git"
+		"url": "https://github.com/neo794/neo794-front.git"
 	},
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com"
