--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@nfjs/back": "^1.0.6",
 		"@nfjs/core": "^1.0.4",
 		"@nfjs/front-server": "^1.0.6",
-		"@nfjs/auth": "^1.0.0",
+		"@neo794/auth": "^1.0.0",
 		"dayjs": "^1.10.4",
 		"imask": "^6.1.0",
 		"mime": "^3.0.0",
